# swb-compiler

./: .gitignore  Cargo.toml  output.swb
compiler/: Cargo.toml
compiler/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
examples/: basic.rs  example.html  monads.html
src/: address.rs  compiler.rs  instruction.rs  lib.rs
swb-compiler/: Cargo.toml
swb-compiler/src/: compiler.rs  lib.rs
swb-demo/: Cargo.toml
swb-demo/src/: main.rs
swb-shared/: Cargo.toml
swb-shared/src/: address.rs  error.rs  instruction.rs  lib.rs  program.rs
