[package]
name = "swb-tools"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "./swb-shared",
    "./swb-demo",
    "./swb-compiler",
    "./compiler"
]

[dependencies]
swb-compiler = { path = "swb-compiler" }
flat-html = { git = "ssh://github.com/BALD-rust/flat-html.git" }
less-html = { git = "ssh://github.com/BALD-rust/less-html.git" }
anyhow = "1.0.70"

[[bin]]
name = "swb"
path = "compiler/src/main.rs"