[package]
name = "swb-demo"
version = "0.1.0"
edition = "2021"


[dependencies]
toekomst = { path = "../../toekomst" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", features = ["nightly", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", features = ["nightly"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", features = ["nightly"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", optional = true, features = ["nrf52840"] }

nrf52840-hal = { version = "0.16.0" }

embedded-graphics = "0.7.1"
embedded-graphics-simulator = { version = "0.4.0", optional = true }
log = "0.4.17"
env_logger = "0.10.0"

swb-compiler = { path = "../../swb-compiler" }
less-html = { path = "../../less-html" }
flat-html = { path = "../../flat-html" }

[features]
simulator = [
    "embassy-executor/std",
    "embassy-time/std",
    "embassy-sync/std",
    "dep:embedded-graphics-simulator",
    "toekomst/simulator"
]