[package]
name = "swb-demo"
version = "0.1.0"
edition = "2021"


[dependencies]
toekomst = { git = "ssh://github.com/BALD-rust/toekomst.git" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77", features = ["nightly", "integrated-timers"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy/", rev = "b05cd77" }
embedded-graphics = "0.7.1"
embedded-graphics-simulator = { version = "0.4.0" }
log = "0.4.17"
env_logger = "0.10.0"

swb-compiler = { path = "../swb-compiler" }
flat-html = { git = "ssh://github.com/BALD-rust/flat-html.git" }
less-html = { git = "ssh://github.com/BALD-rust/less-html.git" }

[features]
simulator = [
    "toekomst/simulator"
]